added a check for java service improvement wait for java service and client connection
